--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,7 +19,7 @@
         <nav class="navbar navbar-expand-md bg-black">
             <div class="container-fluid">
                 <a class="navbar-brand text-white" href="#">
-                    <img src="assets/Rovacach.png" alt="Emoticono-rovacach" width="100px">
+                    <img src="assets/Rovacach.png" alt="Emoticono-rovacach" width="80px">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +59,8 @@
                         amante de los animales. ¡Adoro My Little Pony! ¿Es extraño? No creo, adoro los ponis.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                         <button type="button" class="btn btn-success btn-lg px-4 me-md-2">Contáctame</button>
-                        <button type="button" class="btn btn-outline-danger btn-lg px-4">rosaura.vanessa@gmail.com</button>
+                        <button type="button"
+                            class="btn btn-outline-danger btn-lg px-4">rosaura.vanessa@gmail.com</button>
                     </div>
                 </div>
             </div>
@@ -70,75 +73,48 @@
 
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 py-5">
                 <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#bootstrap"></use>
-                    </svg>
+                    <div
+                        class="feature-icon d-inline-flex align-items-center justify-content-center text-success bg-gradient fs-1 p-2 m-3">
+                        <i class="bi bi-code-slash"></i>
+                    </div>
                     <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Fea</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Desarrollo Web</h3>
+                        <p>Conocimientos básicos de HTML, CSS, JavaScript, Base de Datos y SQL.</p>
                     </div>
                 </div>
+
                 <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#cpu-fill"></use>
-                    </svg>
+                    <div
+                        class="feature-icon d-inline-flex align-items-center justify-content-center text-success bg-gradient fs-1 p-2 m-3">
+                        <i class="bi bi-people"></i>
+                    </div>
                     <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Trabajo en Equipo</h3>
+                        <p>Colaboro con responsabilidad, solidaridad y respeto, tomando en cuenta las opiniones y
+                            sugerencias de mis compañeros.</p>
                     </div>
                 </div>
+
                 <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#calendar3"></use>
-                    </svg>
+                    <div
+                        class="feature-icon d-inline-flex align-items-center justify-content-center text-success bg-gradient fs-1 p-2 m-3">
+                        <i class="bi bi-folder-check"></i>
+                    </div>
                     <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Gestión de Proyectos</h3>
+                        <p>Capacidad para planificar y coordinar proyectos, garantizando que se cumplan los plazos y
+                            objetivos.</p>
                     </div>
                 </div>
+
                 <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#home"></use>
-                    </svg>
-                    <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                    <div
+                        class="feature-icon d-inline-flex align-items-center justify-content-center text-success bg-gradient fs-1 p-2 m-3">
+                        <i class="bi bi-palette"></i>
                     </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#speedometer2"></use>
-                    </svg>
                     <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading.</p>
-                    </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#toggles2"></use>
-                    </svg>
-                    <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading.</p>
-                    </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#geo-fill"></use>
-                    </svg>
-                    <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading.</p>
-                    </div>
-                </div>
-                <div class="col d-flex align-items-start">
-                    <svg class="bi text-body-secondary flex-shrink-0 me-3" width="1.75em" height="1.75em">
-                        <use xlink:href="#tools"></use>
-                    </svg>
-                    <div>
-                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Featured title</h3>
-                        <p>Paragraph of text beneath the heading to explain the heading.</p>
+                        <h3 class="fw-bold mb-0 fs-4 text-body-emphasis">Artista</h3>
+                        <p>Dibujante con grafito, digital y acuarelas, desde el hiperrealisto hasta el estilo ánime.</p>
                     </div>
                 </div>
             </div>
@@ -149,12 +125,13 @@
             <h2 class="pb-2 border-bottom">Proyectos</h2>
 
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 align-items-stretch g-4 py-5">
+
                 <div class="col"> <!--contenedor de la carta-->
 
                     <div id="proyecto-1"
                         class="proyecto card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"> <!--Texto de carta-->
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Clon de Google</h3>
+                            <h3 class="title-pry pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Clon de Google</h3>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
                                     <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
@@ -178,11 +155,10 @@
                 </div>
 
                 <div class="col"> <!--contenedor de la carta-->
-
                     <div id="proyecto-2"
                         class="proyecto card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg">
                         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1"> <!--Texto de carta-->
-                            <h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Ilustraciones</h3>
+                            <h3 class="title-pry pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Ilustraciones</h3>
                             <ul class="d-flex list-unstyled mt-auto">
                                 <li class="me-auto">
                                     <img src="https://github.com/twbs.png" alt="Bootstrap" width="32" height="32"
