--- a/index.html
+++ b/index.html
@@ -248,9 +248,14 @@
 
     </main>
 
-    <footer class="container">
+    <footer id="contacto" class="container">
+
+        <div class="mt-5">
+            <h4 class="text-center px-4 my-5 text-secondary">"...No veas el estudio como una obligación, sino como una oportunidad de adentrarte en
+                el maravilloso mundo del saber.."</h4>
+        </div>
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <p class="col-md-4 mb-0 text-body-secondary">© 2024 Company, Inc</p>
+            <p class="fs-6 col-md-4 mb-0 text-body-secondary">© 2024 Rosaura, TECHNOLOCHICAS PRO</p>
 
             <a href="/"
                 class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
@@ -260,18 +265,40 @@
             </a>
 
             <ul class="nav col-md-4 justify-content-end">
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Features</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Pricing</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-                <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">About</a></li>
+                <li class="nav-item">
+                    <a href="https://github.com/Vanessa03-K/portafolio-b7-g1" target="_blank"
+                        class="nav-link px-4 text-body-secondary fs-1">
+                        <i class="bi bi-github text-success"></i>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="https://www.instagram.com/rovacach_03?igsh=MWN0Z3pha2J5YnVxaw=="
+                        target="_blank" class="nav-link px-4 text-body-secondary fs-1">
+                        <i class="bi bi-instagram text-success"></i>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="https://medibang.com/u/Rovacach03/" target="_blank"
+                        class="nav-link px-4 text-body-secondary fs-1">
+                        <i class="bi bi-paperclip text-success"></i>
+                    </a>
+                </li>
+
+                <li class="nav-item">
+                    <a href="https://www.linkedin.com/in/rosaura-castillo-chabl%C3%A9-8a1598318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app target="_blank"
+                        class="nav-link px-4 text-body-secondary fs-1">
+                        <i class="bi bi-linkedin text-success"></i>
+                    </a>
+                </li>
             </ul>
         </footer>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+        </script>
 </body>
 
 </html>
