--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
         <section id="presentacion" class="container col-xxl-8 px-4 py-5">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-6">
-                    <img src="assets/rovacach-myself.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
-                        height="400" loading="lazy">
+                    <img src="assets/rovacach-myself.png" class="d-block mx-lg-auto img-thumbnail p-4" alt="icono-rovacach">
                 </div>
                 <div class="col-lg-6">
                     <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Rosaura Castillo</h1>
@@ -184,57 +183,67 @@
 
 
         <section id="testimonios">
-            <div id="myCarousel" class="carousel slide mb-6" data-bs-ride="carousel">
+
+            <h2 class="text-center mb-4 border-bottom pb-2"> Testimonios</h2>
+
+            <div id="myCarousel" class="carousel slide mb-6 p-5" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
-                        aria-label="Slide 1" aria-current="true"></button>
-                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"
-                        class=""></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class=""
+                        aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" class="active"
+                        aria-label="Slide 2" aria-current="true"></button>
                     <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"
                         class=""></button>
+                    <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="3" aria-label="Slide 4"
+                        class=""></button>
                 </div>
+
                 <div class="carousel-inner">
+
+                    <div class="carousel-item">
+                        <img src="assets/maria-antonieta.png" class="d-block w-100 testi-character" alt="Imagen-Maria-Antonieta">
+                        <div class="carousel-caption d-none d-md-block ">
+
+                            <h1>María Antonieta</h1>
+                            <p class="opacity-75"> ¿Tiene hambre de pan? ¡Ella sola se hace sus pasteles!</p>
+                            <p><a class="btn btn-lg btn-primary" href="#">Info</a></p>
+                        </div>
+                    </div>
+
                     <div class="carousel-item active">
-                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                        </svg>
-                        <div class="container">
-                            <div class="carousel-caption text-start">
-                                <h1>Example headline.</h1>
-                                <p class="opacity-75">Some representative placeholder content for the first slide of the
-                                    carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-                            </div>
+                        <img src="assets/avogado6-jp.png" class="d-block testi-character" alt="Imagen-avogado6-jp">
+                        <div class="carousel-caption d-none d-md-block ">
+
+                            <h1>Avogado6_jp</h1>
+                            <p class="opacity-75">A través del arte expresa sus sentimientos y representa sus emociones.
+                            </p>
+                            <p><a class="btn btn-lg btn-primary" href="#">Info</a></p>
                         </div>
                     </div>
+
                     <div class="carousel-item">
-                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                        </svg>
-                        <div class="container">
-                            <div class="carousel-caption">
-                                <h1>Another example headline.</h1>
-                                <p>Some representative placeholder content for the second slide of the carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-                            </div>
+                        <img src="assets/akira-toriyama.png" class="d-block w-100 testi-character" alt="Imagen-akira-toriyama">
+                        <div class="carousel-caption d-none d-md-block ">
+
+                            <h1>Akira Toriyama</h1>
+                            <p class="opacity-75">Sus retroalimentaciones fueron importantes para el desarrollo de
+                                Dragon Ball Súper.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#">Info</a></p>
                         </div>
                     </div>
+
                     <div class="carousel-item">
-                        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg"
-                            aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
-                            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-                        </svg>
-                        <div class="container">
-                            <div class="carousel-caption text-end">
-                                <h1>One more for good measure.</h1>
-                                <p>Some representative placeholder content for the third slide of this carousel.</p>
-                                <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-                            </div>
+                        <img src="assets/albert-einstain.png" class="d-block w-100 testi-character" alt="Imagen-Albert-Einstein">
+                        <div class="carousel-caption d-none d-md-block ">
+
+                            <h1>Albert Einstein</h1>
+                            <p class="opacity-75">Ella fue de mucha ayuda para formular la Teoría de la Relatividad.</p>
+                            <p><a class="btn btn-lg btn-primary" href="#">Info</a></p>
                         </div>
                     </div>
+
                 </div>
+
                 <button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
@@ -251,7 +260,8 @@
     <footer id="contacto" class="container">
 
         <div class="mt-5">
-            <h4 class="text-center px-4 my-5 text-secondary">"...No veas el estudio como una obligación, sino como una oportunidad de adentrarte en
+            <h4 class="text-center px-4 my-5 text-secondary">"...No veas el estudio como una obligación, sino como una
+                oportunidad de adentrarte en
                 el maravilloso mundo del saber.."</h4>
         </div>
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
@@ -273,8 +283,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="https://www.instagram.com/rovacach_03?igsh=MWN0Z3pha2J5YnVxaw=="
-                        target="_blank" class="nav-link px-4 text-body-secondary fs-1">
+                    <a href="https://www.instagram.com/rovacach_03?igsh=MWN0Z3pha2J5YnVxaw==" target="_blank"
+                        class="nav-link px-4 text-body-secondary fs-1">
                         <i class="bi bi-instagram text-success"></i>
                     </a>
                 </li>
@@ -287,8 +297,8 @@
                 </li>
 
                 <li class="nav-item">
-                    <a href="https://www.linkedin.com/in/rosaura-castillo-chabl%C3%A9-8a1598318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app target="_blank"
-                        class="nav-link px-4 text-body-secondary fs-1">
+                    <a href="https://www.linkedin.com/in/rosaura-castillo-chabl%C3%A9-8a1598318?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app target="
+                        _blank" class="nav-link px-4 text-body-secondary fs-1">
                         <i class="bi bi-linkedin text-success"></i>
                     </a>
                 </li>
