Mi nombre se reescribe con las cosas que hago

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <img src="assets/rovacach-myself.png" class="d-block mx-lg-auto img-thumbnail p-4" alt="icono-rovacach">
                 </div>
                 <div class="col-lg-6">
-                    <h1 class="display-5 fw-bold text-body-emphasis lh-1 mb-3">Rosaura Castillo</h1>
+                    <h1 id="app" class=" display-5 fw-bold text-body-emphasis lh-1 mb-3">Rosaura Castillo</h1>
                     <p class="lead">Una desarrolladora mini, dibujante, ilustradora, repostera en tiempos libres y
                         amante de los animales. ¡Adoro My Little Pony! ¿Es extraño? No creo, adoro los ponis.</p>
                     <div class="d-grid gap-2 d-md-flex justify-content-md-start">
@@ -204,18 +204,18 @@
                         <img src="assets/maria-antonieta.png" class="d-block w-100 testi-character" alt="Imagen-Maria-Antonieta">
                         <div class="carousel-caption d-none d-md-block ">
 
-                            <h1>María Antonieta</h1>
-                            <p class="opacity-75"> ¿Tiene hambre de pan? ¡Ella sola se hace sus pasteles!</p>
+                            <h1 class="opacity-80 tittle-test">María Antonieta</h1>
+                            <p class="tittle-test fs-4"> ¿Tiene hambre de pan? ¡Ella sola se hace sus pasteles!</p>
                             <p><a class="btn btn-lg btn-primary" href="#">Info</a></p>
                         </div>
                     </div>
 
                     <div class="carousel-item active">
-                        <img src="assets/avogado6-jp.png" class="d-block testi-character" alt="Imagen-avogado6-jp">
+                        <img src="assets/avogado6-jp.png" class="d-block w-100 testi-character" alt="Imagen-avogado6-jp">
                         <div class="carousel-caption d-none d-md-block ">
 
-                            <h1>Avogado6_jp</h1>
-                            <p class="opacity-75">A través del arte expresa sus sentimientos y representa sus emociones.
+                            <h1 class="opacity-80 tittle-test">Avogado6_jp</h1>
+                            <p class="tittle-test fs-4">A través del arte expresa sus sentimientos y representa sus emociones.
                             </p>
                             <p><a class="btn btn-lg btn-primary" href="#">Info</a></p>
                         </div>
@@ -225,8 +225,8 @@
                         <img src="assets/akira-toriyama.png" class="d-block w-100 testi-character" alt="Imagen-akira-toriyama">
                         <div class="carousel-caption d-none d-md-block ">
 
-                            <h1>Akira Toriyama</h1>
-                            <p class="opacity-75">Sus retroalimentaciones fueron importantes para el desarrollo de
+                            <h1 class="opacity-80 tittle-test">Akira Toriyama</h1>
+                            <p class="tittle-test fs-4">Sus retroalimentaciones fueron importantes para el desarrollo de
                                 Dragon Ball Súper.</p>
                             <p><a class="btn btn-lg btn-primary" href="#">Info</a></p>
                         </div>
@@ -236,8 +236,8 @@
                         <img src="assets/albert-einstain.png" class="d-block w-100 testi-character" alt="Imagen-Albert-Einstein">
                         <div class="carousel-caption d-none d-md-block ">
 
-                            <h1>Albert Einstein</h1>
-                            <p class="opacity-75">Ella fue de mucha ayuda para formular la Teoría de la Relatividad.</p>
+                            <h1 class="opacity-80 tittle-test">Albert Einstein</h1>
+                            <p class="tittle-test fs-4">Ella fue de mucha ayuda para formular la Teoría de la Relatividad.</p>
                             <p><a class="btn btn-lg btn-primary" href="#">Info</a></p>
                         </div>
                     </div>
@@ -308,7 +308,12 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
-        </script>
+    </script>
+
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+
+    <script src="script.js"></script>
+
 </body>
 
 </html>
